changed text alignment at footer and fixed header

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
     background-color: #f4f4f4;
     color: #333;
     margin: 20px;
+    padding-top: 70px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -78,13 +79,18 @@ header {
     padding: 20px;
     text-align: center;
     margin-bottom: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
+
 
 footer {
     background-color: #2c3e50;
     color: #fff;
     padding: 20px;
-    text-align: right;
+    text-align: left;
 }
 
 footer h6 {
